@@ -22,10 +22,14 @@
 * This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
+require_once(t3lib_extMgm::extPath('oelib') . 'tx_oelib_commonConstants.php');
+
 /**
  * Class 'tx_oelib_Autoloader' for the 'oelib' extension.
  *
  * This class implements the SPL autoloader.
+ *
+ * In addition, it loads the common constants.
  *
  * @package TYPO3
  * @subpackage tx_oelib
