@@ -31,7 +31,6 @@ require_once(PATH_typo3 . 'sysext/cms/tslib/class.tslib_content.php');
 require_once(PATH_typo3 . 'sysext/lang/lang.php');
 
 require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
-require_once(t3lib_extMgm::extPath('oelib') . 'tx_oelib_commonConstants.php');
 
 /**
  * Class 'tx_oelib_templatehelper' for the 'oelib' extension
