@@ -38,7 +38,7 @@ require_once(PATH_t3lib . 'class.t3lib_cs.php');
 require_once(PATH_t3lib . 'class.t3lib_stdgraphic.php');
 require_once(PATH_tslib . 'class.tslib_gifbuilder.php');
 
-require_once(t3lib_extMgm::extPath('oelib') . 'tx_oelib_commonConstants.php');
+require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
 
 /**
  * Class 'tx_oelib_testingFramework' for the 'oelib' extension.
