@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2494] Change: The autoloader should include the constants
 - [#2456] Feature: Add lazy loading for models
 
 0.5.1 - released 2009-01-02
